--- a/README
+++ b/README
@@ -5,7 +5,12 @@ located at /usr/local/interchange, or wherever your server lives.
 
 Provided by Perusion, http://www.perusion.com
 
-We provide paid support only, but will gladly accept patches.
+Paid support is provided by Perusion, or for free support, you may try
+the #interchange IRC channel, on the FreeNode network
+(chat.freenode.net). More info here:
+http://www.icdevgroup.org/i/dev/users/community
+
+Patches or pull requests welcome.
 
 --------
 
