--- a/google-analytics/README
+++ b/google-analytics/README
@@ -1,14 +1,16 @@
-This analytics script is in the new Universal Analytics format.
+This analytics script is in the new *Universal Analytics* format.
 
 Include the analytics script in your template, like so:
 
-	...
-	__ANALYTICS__
-	</body>
-	</html>
+	<html>
+	<head>
+		...
+		__ANALYTICS__
+	</head>
 
 Be sure to modify the variable to update the UA number and domain.
 
+Add the etc/receipt.html.snippet to the end of your etc/receipt.html page.
 
 To track errors as Events:
 	
@@ -18,4 +20,12 @@ To track errors as Events:
 		[if errors]
 			__ANALYTICS_ERRORS__
 			[error auto=1]
+		[/if]
+
+
+	on pages/login.html:
+
+		[if session failure]
+			__ANALYTICS_ERRORS__
+			<div class="alert alert-error">[calc] delete $Session->{failure}[/calc]</div>
 		[/if]
