--- a/mailchimp/README
+++ b/mailchimp/README
@@ -1,6 +1,9 @@
-===========
- MailChimp 
-===========
+======================
+ MailChimp & Mandrill
+======================
+
+Note: Updates required to your calling [mailchimp] tags if you used a
+      previous version of this tag (API 1.3).
 
 Install these files in the appropriate directories. The 'i' directory
 represents the path to your Interchange Server (perhaps /usr/local/interchange).
@@ -22,8 +25,10 @@ i/usertag/mailchimp360.tag
 i/usertag/logger.tag
 	- logging tag.
 
+other files for queue.
+
 CPAN modules required:
 	LWP::UserAgent
 	JSON
 
-See POD in mailchimp.tag for documentation (`perldoc i/usertag/mailchimp.tag`).
+See POD in mailchimp.tag and mandrill.tag for documentation (`perldoc i/usertag/mailchimp.tag`).
