modern: more cleanup, docs

--- a/modern/README
+++ b/modern/README
@@ -9,3 +9,11 @@ All files are intended to reside in your Interchange server directory.
 
 	External yes
 
+
+
+http://perltricks.com/article/25/2013/5/20/Old-School-Object-Oriented-Perl
+
+http://perldoc.perl.org/perlobj.html
+
+Using OO Systems:
+http://perldoc.perl.org/perlootut.html
