External.pm in latest IC

--- a/modern/README
+++ b/modern/README
@@ -3,7 +3,8 @@ Modern methods to develop for Interchange 5
 
 All files are intended to reside in your Interchange server directory.
 
-- replace External.pm (until this version makes it back to core IC)
+- If using IC < 5.10.0, replace your lib/Vend/External.pm with the
+  copy here.
 
 - Add to interchange.cfg and your catalog.cfg:
 
